--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/ctrlp.vim"]
 	path = bundle/ctrlp.vim
 	url = git@github.com:kien/ctrlp.vim.git
+[submodule "bundle/UltiSnips"]
+	path = bundle/UltiSnips
+	url = git@github.com:vim-scripts/UltiSnips.git
