--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/vim-airline"]
 	path = bundle/vim-airline
 	url = git@github.com:bling/vim-airline.git
+[submodule "bundle/php.vim"]
+	path = bundle/php.vim
+	url = git@github.com:StanAngeloff/php.vim.git
