--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundle/sideways.vim"]
 	path = bundle/sideways.vim
 	url = git@github.com:AndrewRadev/sideways.vim.git
+[submodule "bundle/vim-endwise"]
+	path = bundle/vim-endwise
+	url = git@github.com:tpope/vim-endwise.git
