--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ unbind C-b
 bind C-a send-prefix
 
 # Use vim keybindings in copy mode
-setw -g mode-keys vi
+set -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
