--- a/tmux.conf
+++ b/tmux.conf
@@ -22,3 +22,6 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# improve colors
+set -g default-terminal "screen-256color"
