Revert "Use default tmux prefix"
This reverts commit 9732d11ad9d23a3f119e80d179280323c81e48d7.

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,10 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 # Bring back clear screen under tmux prefix
 bind C-l send-keys 'C-l'
 
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
 # Use vim keybindings in copy mode
 set -g mode-keys vi
 
