--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,9 @@ setw -g pane-base-index 1
 # Using the mouse is for losers
 setw -g mode-mouse off
 
+# 256 Colours
+set -g default-terminal "screen-256color"
+
 # Shortcuts
 
 bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
