Source tmuxline conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,9 @@ setw -g mode-mouse off
 # 256 Colours
 set -g default-terminal "screen-256color"
 
+# Source tmuxline config
+if-shell "test -f ~/.tmux.d/tmuxline.conf" "source ~/.tmux.d/tmuxline.conf"
+
 # Shortcuts
 
 bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
