Unify tmux.conf and !!.fancy

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,9 @@ setw -g pane-base-index 1
 # Using the mouse is for losers
 setw -g mode-mouse off
 
+# Use vim keybindings in copy mode
+set -g mode-keys vi
+
 # 256 Colours
 set -g default-terminal "screen-256color"
 
@@ -38,6 +41,7 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Bring back clear screen under tmux prefix
 bind C-l send-keys 'C-l'
+
 # Shortcuts
 
 bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
