Rejig tmux.conf, increase repeat time

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,6 @@
-# Rebind prefix
-set -g prefix C-a
-unbind C-b
-
-# Allow sending of C-a to applications
-bind C-a send-prefix
+##
+# Configuration
+##
 
 # Snappy tmux
 set -s escape-time 1
@@ -23,6 +20,24 @@ set -g default-terminal "screen-256color"
 
 # Source tmuxline config
 if-shell "test -f ~/.tmux.d/tmuxline.conf" "source ~/.tmux.d/tmuxline.conf"
+
+# increase repeat time for repeatable commands
+set -g repeat-time 1000
+
+# re-number windows when one is closed
+ set -g renumber-windows on
+
+##
+# Key Bindings
+##
+
+# Rebind prefix
+set -g prefix C-a
+unbind C-b
+
+# Allow sending of C-a to applications
+bind C-a send-prefix
+
 
 # Smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
