--- a/tmux.conf
+++ b/tmux.conf
@@ -61,7 +61,7 @@ bind C-l send-keys 'C-l'
 
 bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind -r Left resize-pane -L 5
+bind -r Down resize-pane -D 5
+bind -r Up resize-pane -U 5
+bind -r Right resize-pane -R 5
