Making vertical splits and new windows somewhat more sensible

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,6 +27,10 @@ set -g repeat-time 1000
 # re-number windows when one is closed
  set -g renumber-windows on
 
+# Activity monitor
+setw -g monitor-activity on
+set -g visual-activity on
+
 ##
 # Key Bindings
 ##
@@ -57,11 +61,19 @@ bind-key -t vi-copy Enter copy-pipe "xclip -sel clip -i"
 # Bring back clear screen under tmux prefix
 bind C-l send-keys 'C-l'
 
-# Shortcuts
-
+# Bind prefix + r to reload tmux conf
 bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 
+# Add some sanity to resizing panes
 bind -r Left resize-pane -L 5
 bind -r Down resize-pane -D 5
 bind -r Up resize-pane -U 5
 bind -r Right resize-pane -R 5
+
+# Change new split/window behaviour to something more sensible
+unbind c
+bind c new-window -c '#{pane_current_path}'
+unbind %
+bind % split-window -h -c '#{pane_current_path}'
+# unbind "
+# bind " split-window -v -c '#{pane_current_path}'
