Added map to synchronise panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,3 +72,6 @@ unbind %
 bind % split-window -h -c '#{pane_current_path}'
 unbind '"'
 bind '"' split-window -v -c '#{pane_current_path}'
+
+# Toggle synchronise panes
+bind C-s set-window-option synchronize-panes
