--- a/tmux.conf
+++ b/tmux.conf
@@ -75,3 +75,6 @@ bind '"' split-window -v -c '#{pane_current_path}'
 
 # Toggle synchronise panes
 bind C-s set-window-option synchronize-panes
+
+# Clear all panes on screen
+# bind C-L set-window-option synchronize-panes on \; send-keys 'C-l' \; set-window-option synchronize-panes off
