Added tclear alias for clearing tmux panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -77,4 +77,4 @@ bind '"' split-window -v -c '#{pane_current_path}'
 bind C-s set-window-option synchronize-panes
 
 # Clear all panes on screen
-# bind C-L set-window-option synchronize-panes on \; send-keys 'C-l' \; set-window-option synchronize-panes off
+# bind C-' set-window-option synchronize-panes on \; send-keys 'C-l' \; set-window-option synchronize-panes off
