Repeat next/previous window

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,6 +59,10 @@ bind C-l send-keys 'C-l'
 # Bind prefix + r to reload tmux conf
 bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 
+# Allow repeats of next/previous window
+bind -r n next-window
+bind -r previous-window
+
 # Add some sanity to resizing panes
 bind -r Left resize-pane -L 5
 bind -r Down resize-pane -D 5
