Corrected mix in previous-window binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -61,7 +61,7 @@ bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 
 # Allow repeats of next/previous window
 bind -r n next-window
-bind -r previous-window
+bind -r p previous-window
 
 # Add some sanity to resizing panes
 bind -r Left resize-pane -L 5
