Added something I'm not quite sure what it does

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,7 @@ set -g mode-keys vi
 
 # 256 Colours
 set -g default-terminal "screen-256color"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Source tmuxline config
 if-shell "test -f ~/.tmux.d/tmuxline.conf" "source ~/.tmux.d/tmuxline.conf"
