A fuel pump is slightly easier to see

--- a/tmux.d/tmuxline.conf
+++ b/tmux.d/tmuxline.conf
@@ -24,6 +24,6 @@ setw -g window-status-activity-fg "colour27"
 setw -g window-status-separator ""
 setw -g window-status-bg "colour234"
 set -g status-left "#[fg=colour15,bg=colour27] #S #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] #(whoami) #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour39,bg=colour234] #(is_plugged_in && echo 🔌  || echo 🔋  )  #(battery_status) #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] %R  %a %d   %Y #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour27] #H "
+set -g status-right "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour39,bg=colour234] #(is_plugged_in && echo ⛽️  || echo 🔋  )  #(battery_status) #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] %R  %a %d   %Y #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour27] #H "
 setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=colour234,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] #I  #W  #F #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]"
