--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,7 @@ set -s escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Using the mouse is for losers
-setw -g mode-mouse off
+setw -g mode-mouse on
 
 # Use vim keybindings in copy mode
 set -g mode-keys vi
