Revert "It's occassionally useful"
This reverts commit 2266751c6d215be28d9d87f62fda9ad0a06de42e.

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,8 @@ set -s escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-setw -g mode-mouse on
+# Using the mouse is for losers
+setw -g mode-mouse off
 
 # Use vim keybindings in copy mode
 set -g mode-keys vi
