Add guard window

--- a/tmuxinator/sean.yml
+++ b/tmuxinator/sean.yml
@@ -5,6 +5,7 @@ root: ~/Repositories/sean
 
 windows:
   - code:
+  - guard: guard
   - console: bundle exec rails console
   - logs: tail -f log/development.log
   - server: bundle exec rails server --binding 127.0.0.1
