Notifications from tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,9 @@ set -g mode-keys vi
 # 256 Colours
 set -g default-terminal "screen-256color"
 
+# Fixes something I'm not quite sure what
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # Source tmuxline config
 if-shell "test -f ~/.tmux.d/tmuxline.conf" "source ~/.tmux.d/tmuxline.conf"
 
@@ -79,6 +82,3 @@ bind '"' split-window -v -c '#{pane_current_path}'
 
 # Toggle synchronise panes
 bind C-s set-window-option synchronize-panes
-
-# Clear all panes on screen
-# bind C-' set-window-option synchronize-panes on \; send-keys 'C-l' \; set-window-option synchronize-panes off
