--- a/tmuxinator/etc.yml
+++ b/tmuxinator/etc.yml
@@ -5,3 +5,4 @@ windows:
     - dotfiles:
     - cheatsheet: cd ~/Documents/cheatsheet ; clear
     - misc: cd ~/Repositories/learning ; clear
+    - .js: cd ~/.js ; clear
