--- a/tmux.conf
+++ b/tmux.conf
@@ -27,8 +27,11 @@ if-shell "test -f ~/.tmux.d/tmuxline.conf" "source ~/.tmux.d/tmuxline.conf"
 # increase repeat time for repeatable commands
 set -g repeat-time 1000
 
-# re-number windows when one is closed
- set -g renumber-windows on
+# Re-number windows when one is closed
+set -g renumber-windows on
+
+# Increase scrollback
+set-option -g history-limit 4000
 
 ##
 # Key Bindings
