Remove todos from tmuxline

--- a/tmux.d/tmuxline.conf
+++ b/tmux.d/tmuxline.conf
@@ -1,5 +1,5 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Tue, 16 Sep 2014
+# on Sat, 06 Feb 2016
 
 set -g status-bg "colour234"
 set -g message-command-fg "colour144"
@@ -16,14 +16,14 @@ set -g status-attr "none"
 set -g status-utf8 "on"
 set -g pane-border-fg "colour237"
 set -g status-left-attr "none"
-setw -g window-status-fg "colour39"
+setw -g window-status-fg "colour27"
 setw -g window-status-attr "none"
 setw -g window-status-activity-bg "colour234"
-setw -g window-status-activity-attr "none"
+setw -g window-status-activity-attr "underscore"
 setw -g window-status-activity-fg "colour27"
 setw -g window-status-separator ""
 setw -g window-status-bg "colour234"
 set -g status-left "#[fg=colour15,bg=colour27] #S #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] #(whoami) #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour39,bg=colour234] 📝  #(todo --count)  #(is_plugged_in && echo ⛽️  || echo 🔋  )  #(battery_status) #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] %R  %a %d   %Y #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour27] #H "
+set -g status-right "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour27,bg=colour234] #(~/.bin/is_plugged_in && echo ⛽️  || echo 🔋  )  #(~/.bin/battery_status) #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] %R  %a %d   %Y #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour27] #H "
 setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=colour234,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] #I  #W  #F #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]"
