--- a/.install/Brewfile
+++ b/.install/Brewfile
@@ -22,6 +22,7 @@ brew 'jq'
 brew 'keybase'
 brew 'macvim', args: ['HEAD', 'with-cscope', 'with-lua', 'with-override-system-vim', 'with-luajit', 'with-python']
 brew 'neovim/neovim/neovim', args: ['HEAD']
+brew 'rbenv'
 brew 'reattach-to-user-namespace'
 brew 'terminal-notifier'
 brew 'thoughtbot/formulae/rcm'
