--- a/tmux.d/tmuxline.conf
+++ b/tmux.d/tmuxline.conf
@@ -1,28 +1,28 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Mon, 17 Dec 2018
+# on Tue, 01 Jan 2019
 
 set -g status-justify "centre"
 set -g status "on"
 set -g status-attr "none"
-set -g message-command-bg "colour31"
+set -g message-command-bg "colour237"
 set -g status-left-length "100"
-set -g pane-active-border-fg "colour254"
+set -g pane-active-border-fg "colour27"
 set -g status-bg "colour234"
-set -g message-command-fg "colour231"
-set -g pane-border-fg "colour240"
-set -g message-bg "colour31"
+set -g message-command-fg "colour144"
+set -g pane-border-fg "colour237"
+set -g message-bg "colour237"
 set -g status-left-attr "none"
 set -g status-right-attr "none"
 set -g status-right-length "100"
-set -g message-fg "colour231"
-setw -g window-status-fg "colour250"
+set -g message-fg "colour144"
+setw -g window-status-fg "colour27"
 setw -g window-status-attr "none"
 setw -g window-status-activity-bg "colour234"
 setw -g window-status-activity-attr "underscore"
-setw -g window-status-activity-fg "colour250"
+setw -g window-status-activity-fg "colour27"
 setw -g window-status-separator ""
 setw -g window-status-bg "colour234"
-set -g status-left "#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour240,nobold,nounderscore,noitalics]#[fg=colour237,bg=colour240] #(whoami) #[fg=colour240,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour232,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour232] #(~/.bin/is_plugged_in && echo ⛽️  || echo 🔋  )  #(~/.bin/battery_status) #[fg=colour236,bg=colour232,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] %R  %a %d   %Y #[fg=colour252,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour252] #H "
-setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour234,bg=colour31,nobold,nounderscore,noitalics]#[fg=colour231,bg=colour31,bold] #I  #W  #F #[fg=colour31,bg=colour234,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=colour15,bg=colour27] #S #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] #(whoami) #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour27,bg=colour234] #(~/.bin/is_plugged_in && echo ⛽️  || echo 🔋  )  #(~/.bin/battery_status) #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] %R | %a %d  | %Y #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour27] #H "
+setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I | #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=colour234,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] #I | #W | #F #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]"
